fix icon misalignment

--- a/src/components/Supply.module.css
+++ b/src/components/Supply.module.css
@@ -5,7 +5,7 @@
 
 .row {
   display: grid;
-  grid-template-columns: 30px 280px 200px repeat(4, 1fr);
+  grid-template-columns: 60px 280px 200px repeat(4, 1fr);
   min-height: 4rem;
   align-items: center;
   min-width: fit-content;
